[gd_scene load_steps=2 format=3 uid="uid://dim3p3ky8u4ef"]

[ext_resource type="Script" path="res://Scenes/Menu/Options/Tabs/Controls.gd" id="1_ocay0"]

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ocay0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Car"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steer Sens"

[node name="Steer Sens" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tilt Sens"

[node name="Tilt Sens" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Camera"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation Sens"

[node name="Cam Rotation Sens" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Center Speed"

[node name="Cam Center Speed" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
max_value = 50.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Center Delay"

[node name="Cam Center Delay" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
max_value = 2.0
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controler"
horizontal_alignment = 1

[node name="Controller" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 1
popup/item_0/text = "None"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Deadzone"

[node name="Joystick Deadzone" type="SpinBox" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Steer Sens" to="." method="_on_steer_sens_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/Tilt Sens" to="." method="_on_tilt_sens_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Cam Rotation Sens" to="." method="_on_cam_rotation_sens_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/Cam Center Speed" to="." method="_on_cam_center_speed_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3/Cam Center Delay" to="." method="_on_cam_center_delay_value_changed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Controller" to="." method="_on_controller_item_selected"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/Joystick Deadzone" to="." method="_on_joystick_deadzone_value_changed"]
